[tool.poetry]
name = "steelwill"
version = "0.1.0"
description = ""
authors = ["piasekj <piasekj1602@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
streamlit = "^1.45.1"
folium = "^0.19.6"
streamlit-folium = "^0.25.0"
python-multipart = "^0.0.20"
torch = ">=1.8.0"
pillow = "^11.3.0"
gitpython = "^3.1.44"
matplotlib = "^3.10.1"
numpy = "^2.2.4"
opencv-python = "^4.11.0.86"
scipy = "^1.4.1"
thop = "^0.1.1.post2209072238"
torchvision = "^0.22.0"
tqdm = "^4.67.1"
ultralytics = "^8.3.144"
pandas = "^2.2.3"
seaborn = "^0.13.2"
streamlit-autorefresh = "^1.0.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
